<resources>
    <string name="app_name">Github Commits</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_github_let_s_begin_the_adventure">Welcome to GitHub!\nLet\'s begin the adventure</string>
    <string name="enter_repo_name">Enter repo name</string>
    <string name="enter_owner_name">Enter owner name</string>
    <string name="commits_list">Commits list</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="my_message">My Messages</string>
    <string name="date">Date</string>
    <string name="sort_and_filter">Sort and Filter</string>
    <string name="sort_by_author">Sort by author</string>
    <string name="sort_by_email">Sort by email</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="dd_mm_yyyy">DD-MM-YYYY</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="apply">Apply</string>
</resources>