<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="listener"
            type="android.view.View.OnClickListener" />
        <variable
            name="isExpanded"
            type="boolean" />
        <variable
            name="data"
            type="com.example.githubcommits.domain.response.GithubCommitsRemoteResponseItem" />
        <import type="android.view.View" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:background="@drawable/gradient_bg">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivEmoji"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="20dp"
                app:shapeAppearanceOverlay="@drawable/ronud_circle"
                android:src="@drawable/ic_emoji"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/ivDrop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:onClick="@{listener::onClick}"
                android:src="@drawable/ic_down_arrow"
                android:background="@drawable/ripple_effect"
                android:padding="10dp"
                android:backgroundTint="@android:color/transparent"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/share_tech_mono_regular"
                tools:text="@string/enter_your_name"
                android:text="@{data.Commit.committer.name}"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@id/ivDrop"
                app:layout_constraintStart_toEndOf="@id/ivEmoji"
                app:layout_constraintTop_toTopOf="@id/ivEmoji" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/share_tech_mono_regular"
                tools:text="@string/enter_your_email"
                android:text="@{data.Commit.committer.email}"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@id/ivDrop"
                app:layout_constraintStart_toEndOf="@id/ivEmoji"
                app:layout_constraintTop_toBottomOf="@id/tvName" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvData"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/share_tech_mono_regular"
                tools:text="@string/date"
                android:text="@{data.Commit.committer.date}"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/tvMessage"
                app:layout_constraintEnd_toStartOf="@id/ivDrop"
                app:layout_constraintStart_toEndOf="@id/ivEmoji"
                app:layout_constraintTop_toBottomOf="@id/tvMail" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMessage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:padding="15dp"
                tools:text="@string/my_message"
                android:text="@{data.Commit.message}"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:visibility="@{isExpanded ? View.VISIBLE : View.GONE, default = gone}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvData" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>