<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="listener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_bg_gradient"
        tools:context=".presentation.fragments.GithubRepoInputFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/twentyFiveGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.25"
            android:orientation="vertical" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/seventyFiveGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.75"
            android:orientation="vertical" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLogo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/twentyFiveGuide"
            app:layout_constraintEnd_toEndOf="@id/seventyFiveGuide"
            android:src="@drawable/github_copilot"
            app:layout_constraintDimensionRatio="1:1"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/share_tech_mono_regular"
            android:text="@string/welcome_to_github_let_s_begin_the_adventure"
            android:textColor="@color/white_opacity_60"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLogo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOwner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/share_tech_mono_regular"
            android:text="@string/enter_owner_name"
            android:textColor="@color/sky_blue"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etOwner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/round_with_blue_stroke"
            android:hint="@string/enter_owner_name"
            android:textColorHint="@color/white_opacity_60"
            android:padding="15dp"
            android:textColor="@color/white_opacity_60"
            android:textSize="18sp"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvOwner"
            app:layout_constraintTop_toBottomOf="@id/tvOwner" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRepo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/share_tech_mono_regular"
            android:text="@string/enter_repo_name"
            android:textColor="@color/sky_blue"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etOwner" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etRepo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/round_with_blue_stroke"
            android:hint="@string/enter_repo_name"
            android:textColorHint="@color/white_opacity_60"
            android:padding="15dp"
            android:inputType="textCapWords"
            android:imeOptions="actionDone"
            android:textColor="@color/white_opacity_60"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvRepo"
            app:layout_constraintTop_toBottomOf="@id/tvRepo" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/etRepo"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/ripple_effect"
            android:layout_marginTop="50dp"
            android:text="Submit"
            android:gravity="center"
            android:onClick="@{listener::onClick}"
            android:textColor="@color/white_opacity_60"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="15dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>